--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = 'mongodb+srv://branislavtodorovic:0lgabrac0@cluster0.zkhyg.mongodb.net/animalsDatabase?retryWrites=true&w=majority'
+MONGO_URI = 'mongodb+srv://branislavtodorovic:0lgabrac0@cluster0.zkhyg.mongodb.net/Supervisor?retryWrites=true&w=majority'
